[gd_scene load_steps=4 format=3 uid="uid://bta56dmuh0tlp"]

[ext_resource type="Script" path="res://codes/hard_level_scene.gd" id="1_k3q6p"]
[ext_resource type="PackedScene" uid="uid://beixhopf2vygy" path="res://scenes/champion.tscn" id="2_mg30u"]
[ext_resource type="Script" path="res://codes/HardLevelProjectiles.gd" id="3_hpuba"]

[node name="HardLevelScene" type="Node2D"]
script = ExtResource("1_k3q6p")

[node name="Champion" parent="." instance=ExtResource("2_mg30u")]
position = Vector2(576, 296)

[node name="HardLevelProjectiles" type="Node2D" parent="."]
script = ExtResource("3_hpuba")

[node name="ProjectileSpawn" type="Timer" parent="."]
wait_time = 0.75

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProjectileCountLabel" type="Label" parent="UI"]
offset_left = 496.0
offset_top = 16.0
offset_right = 659.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 50
text = "0/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 464.0
offset_top = 544.0
offset_right = 696.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="ResumeButton" type="Button" parent="."]
visible = false
offset_left = 464.0
offset_top = 544.0
offset_right = 696.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="PausedUI" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="PausedUI"]
offset_left = 24.0
offset_top = 544.0
offset_right = 152.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="child_exiting_tree" from="HardLevelProjectiles" to="." method="_on_hard_level_projectiles_child_exiting_tree"]
[connection signal="timeout" from="ProjectileSpawn" to="." method="_on_projectile_spawn_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausedUI/BackButton" to="." method="_on_back_button_pressed"]
